# quota-throttle

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  config.example.toml
docs/design/panel-control/: detailed-design.md
docs/design/quota-eyes/: detailed-design.md
docs/design/status-ui/: detailed-design.md
docs/design/status-ui/subplans/: statusui-2-newapi-panel.md  statusui-3-live-metrics.md
src/: boot.rs  config.rs  main.rs  newapi.rs  orchestrator.rs  quota.rs  status.rs
